--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -4,7 +4,12 @@ upstream app {
 
 server {
   listen 80;
-  server_name gotticket;
+  server_name 178.62.31.99;
+  include self-signed.conf;
+  include ssl-params.conf;
+  listen 443 ssl http2 default_server;
+  listen [::]:443 ssl http2 default_server;
+
 
   location / {
       proxy_pass http://app;
