--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -5,8 +5,8 @@ upstream app {
 server {
   listen 80;
   server_name 178.62.31.99;
-  include self-signed.conf;
-  include ssl-params.conf;
+  include ./self-signed.conf;
+  include ./ssl-params.conf;
   listen 443 ssl http2 default_server;
   listen [::]:443 ssl http2 default_server;
 
