--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,5 +2,5 @@ FROM nginx
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./app.conf /etc/nginx/conf.d/app.conf
-COPY /etc/ssl/certs/nginx-selfsigned.crt /etc/nginx/nginx-selfsigned.crt
-COPY /etc/ssl/private/nginx-selfsigned.key /etc/nginx/nginx-selfsigned.key 
+COPY ./nginx-selfsigned.crt /etc/nginx/nginx-selfsigned.crt
+COPY ./nginx-selfsigned.key /etc/nginx/nginx-selfsigned.key 
