--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.3",
+    "nestjs-dotenv": "^1.2.1",
     "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "postgres": "^3.3.2",
