--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=
 POSTGRES_DB=gotticket
 FRONTEND_URL=http://localhost:8080
+BACKEND_URL=http://localhost:3001
+EMAIL_LOGIN=
+EMAIL_PASSWORD=
