--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,11 @@ services:
     depends_on:
       - app
     restart: always
+    certbot:
+      image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
   app-db:
     image: "healthcheck/postgres"
     env_file: ./config/postgres_app.env
