--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -4,9 +4,9 @@ upstream app {
 
 server {
   listen 80;
-  server_name app.goticket.am;
-  listen 443 ssl http2 app.goticket.am;
-  listen [::]:443 ssl http2 app.goticket.am;
+  server_name 178.62.31.99;
+  listen 443 ssl http2 default_server;
+  listen [::]:443 ssl http2 default_server;
   ssl_certificate nginx-selfsigned.crt;
   ssl_certificate_key nginx-selfsigned.key;
 
